<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mary</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_highscores">Highscores</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_play">Play</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="defaultTime">mm:ss</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_ok">Ok</string>
    <string name="text_your_score_is">Your Score is:</string>
    <string name="text_errors">Errors</string>
    <string name="title_activity_your_score">Your Score</string>

</resources>
