<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayActivity" >

    <TextView
        android:id="@+id/textView_calcQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:gravity="center"
        android:longClickable="false"
        android:scrollHorizontally="false"
        android:textAllCaps="false"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/LinearLayout_inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout_row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_9"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_4"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_5"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_6"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_score_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="button_numberClick"
                android:text="@string/button_3"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:onClick="button_numberClick"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/defaultTime"
        android:textSize="40sp" />

</LinearLayout>